app/assets/stylesheets/new-product.css
#product-form-container {
  height: calc(100vh - 63px);
  background-color: #243e2e;
}

#product-form-container form {
  padding: 0 20px 20px 20px;
}

#product-form-container form div {
  margin-bottom: 15px;
}

#product-form-container h1 {
  font-size: 20px;
  font-weight: 700;
  line-height: 25px;
  text-align: center;
}

#product-form-container label {
  color: #deb35b;
}

#menu_name,
#menu_description {
  width: 100%;
  height: 30px;
}

#product-form-container input,
textarea,
select {
  background-color: #deb35b;
  padding: 3px 5px 2px 5px;
  height: 30px;
  border: 1px solid #000;
  color: #a94c2e;
  font-size: 20px;
}

#product-form-container textarea {
  height: 90px;
}

#add-product-button input {
  color: #deb35b;
  background: #e5dccf;
}

#product-form-container input:nth-child(3) {
  background: none;
  border: none;
  padding: 0;
}

#menu_menu_images {
  color: #deb35b;
  height: 30px;
  box-sizing: border-box;
}

#menu_menu_images::-webkit-file-upload-button {
  visibility: hidden;
}

#menu_menu_images::before {
  content: "Fotoğraf Seç";
  display: inline-block;
  background-color: #deb35b;
  color: #a94c2e;
  padding: 3px 5px 2px 5px;
  height: 30px;
  width: 138px;
  outline: none;
  white-space: nowrap;
  -webkit-user-select: none;
  cursor: pointer;
  font-size: 20px;
  border: 1px solid #262626;
}

#menu_price {
  height: 30px;
  width: 55px;
}

#product-form-container ::placeholder {
  color: #a94c2e;
  font-size: 20px;
  font-weight: 400;
  line-height: 25px;
  padding: 3px 5px 2px 5px;
}

